[package]
name = "pool_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
# device only
embassy-rp = { version = "0.4.0", features = ["intrinsics", "run-from-ram", "critical-section-impl", "time-driver", "rp2040"], optional = true }
cyw43 = { version = "0.3.0", optional = true }
cyw43-pio = { version = "0.4.0", optional = true }
cortex-m-rt = { version = "0.7.3", optional = true }
cortex-m = { version = "0.7.7", optional = true }

# sim only
embedded-graphics-simulator = { version = "0.7.0", optional = true }

embassy-time = "0.4.0"
embassy-executor = { version = "0.7.0", features = ["nightly", "executor-thread"] }
embassy-net = { version = "0.6.0", features = ["dns", "udp", "dhcpv4", "medium-ethernet", "proto-ipv4"] }
embassy-usb = "0.4.0"
embassy-sync = "0.6.2"

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"

portable-atomic = { version = "1.6.0", features = ["critical-section"] }
static_cell = "2.1.0"
sntpc = { version = "0.5.2", default-features = false, features = ["embassy-socket"] }
rand_core = "0.6.4"
jiff = { version = "0.2.6", default-features = false, features = ["static"] }
mipidsi = "0.9.0"
heapless = "0.8.0"

[features]
device = [
    "dep:embassy-rp",
    "dep:cyw43",
    "dep:cyw43-pio",
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "embassy-executor/arch-cortex-m",
]
sim = [
    "dep:embedded-graphics-simulator",
    "embassy-executor/arch-std",
    "embassy-time/std",
    "sntpc/std",
    "sntpc/std-socket",
]
